[package]
authors = ["fys"]
edition = "2021"
name = "ping-rs"
version = "0.1.0"

[dependencies]
futures = "0.3.21"
anyhow = "1.0.56"
tokio = { version = "1.8", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winping = "0.10"

[target.'cfg(unix)'.dependencies]
netdiag2 = {git = "https://github.com/Fengys123/netdiag.git"}